# onvif-rtsp-browser

./: .gitignore  CMakeLists.txt  README.md
python/: ipcam_discover_onvif.py
src/: main.cpp
